--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,46 @@ a:hover {
 main img{
     width: 100%;
 }
+
+.align-start {
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start {
+    width: 1136px;
+    height: 300px;
+    border-radius: 30px;
+    background:linear-gradient(#EE6112, #CF7205);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+h1 {
+    font-size: 24px;
+    color: white;
+    font-weight: 500px;
+}
+
+.start button {
+    width: 900px;
+    height: 66px;
+    background-color: #FEFEFE;
+    border-radius: 40px;
+    border: none;
+    font-size: 20px;
+    font-weight: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.start button h1{
+    color: #504E4E;
+}
+
