--- a/css/style.css
+++ b/css/style.css
@@ -203,3 +203,9 @@ h1 {
     margin-top: 10px;
     margin-left: 20px;
 }
+
+.faixa-laranja {
+    width: 100%;
+    height: 500px;
+    background-color: #EE6112;
+}
