--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ footer {
   }
   
   footer li {
-    color: #bb747d;
+    color:white;
     margin: 20px;
     font-family: "Fjord One", serif;
     font-weight: 500;
