--- a/css/style.css
+++ b/css/style.css
@@ -100,15 +100,25 @@ h1 {
     gap: 20px;
 }
 
+.start img {
+    width: 298px;
+}
+
+
 .start button h1 {
-    color: #504E4E;
+    color: #766969;
 }
 
 .align-tut {
-    height: 600px;
+    height: 380px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.botao button img{
+    width: 30px;
+    margin-left: 220px;
 }
 
 .tutorial {
@@ -126,38 +136,8 @@ h1 {
 }
 
 .tutorial h1 {
-    color: #808183;
-    font-size: 29px;
-}
-
-.card-ing {
-    width: 190px;
-    height: 190px;
-    border-radius: 12px;
-    background-color: #DBDBDB;
-    border: 2px solid #C9CFD3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
-
-.card-ing p {
-    font-size: 14px;
-    color: #504E4E;
-    font-weight: 700;
-    margin-bottom: 10px;
-}
-
-.ball {
-    width: 30px;
-    height: 29px;
-    border-radius: 50px;
-    background-color: #F1F1F1;
-    border: 1.5 solid #C9CFD3;
-    margin-left: 110px;
-    margin-top: 10px;
+    color: #857979;
+    font-size: 25px;
 }
 
 .section-exp {
